--- a/bundles/org.eclipse.launchbar.ui/plugin.properties
+++ b/bundles/org.eclipse.launchbar.ui/plugin.properties
@@ -1,3 +1,4 @@
 launchToolBar.label = LaunchBar
-targetsView.name = Launch Targets
-targetsContent.name = Launch Targets
+ConnectionsViewCategory.name=Connections
+ConnectionsView.name=Connections
+ConnectionsContent.name=Connections
