--- a/bundles/org.eclipse.launchbar.ui/plugin.xml
+++ b/bundles/org.eclipse.launchbar.ui/plugin.xml
@@ -71,7 +71,7 @@
    <extension
          point="org.eclipse.ui.propertyPages">
       <page
-            class="org.eclipse.launchbar.ui.internal.targetsView.TargetPropertyPage"
+            class="org.eclipse.remote.ui.internal.views.RemoteConnectionPropertyPage"
             id="org.eclipse.launchbar.ui.infoPropertyPage"
             name="About">
          <enabledWhen>
@@ -80,6 +80,113 @@
             </instanceof>
          </enabledWhen>
       </page>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.adapters">
+      <factory
+            adaptableType="org.eclipse.remote.core.internal.api2.proxy.RemoteServices"
+            class="org.eclipse.remote.ui.internal.api2.RemoteServicesUIFactory">
+         <adapter
+               type="org.eclipse.remote.ui.api2.IRemoteServicesUI">
+         </adapter>
+      </factory>
+   </extension>
+   <extension
+         point="org.eclipse.ui.views">
+      <category
+            id="org.eclipse.remote.ui.view.category.connections"
+            name="%ConnectionsViewCategory.name">
+      </category>
+      <view
+            category="org.eclipse.remote.ui.view.category.connections"
+            class="org.eclipse.remote.ui.internal.views.RemoteConnectionsNavigator"
+            id="org.eclipse.remote.ui.view.connections"
+            name="%ConnectionsView.name"
+            restorable="true">
+      </view>
+   </extension>
+   <extension
+         point="org.eclipse.ui.navigator.navigatorContent">
+      <navigatorContent
+            activeByDefault="true"
+            contentProvider="org.eclipse.remote.ui.internal.views.RemoteConnectionsContentProvider"
+            id="org.eclipse.remote.ui.navigatorContent.connections"
+            labelProvider="org.eclipse.remote.ui.internal.views.RemoteConnectionsLabelProvider"
+            name="%ConnectionsContent.name">
+         <triggerPoints>
+            <instanceof
+                  value="org.eclipse.remote.core.api2.IRemoteManager">
+            </instanceof></triggerPoints>
+         <possibleChildren>
+            <instanceof
+                  value="org.eclipse.remote.core.api2.IRemoteConnection">
+            </instanceof>
+         </possibleChildren>
+      </navigatorContent>
+      <actionProvider
+            class="org.eclipse.remote.ui.internal.views.RemoteConnectionsActionProvider">
+         <enablement>
+            <instanceof
+                  value="org.eclipse.remote.core.api2.IRemoteConnection">
+            </instanceof>
+         </enablement>
+      </actionProvider>
+   </extension>
+   <extension
+         point="org.eclipse.ui.navigator.viewer">
+      <viewer
+            viewerId="org.eclipse.remote.ui.view.connections">
+         <options>
+            <property
+                  name="org.eclipse.ui.navigator.hideLinkWithEditorAction"
+                  value="true">
+            </property>
+         </options>
+      </viewer>
+      <viewerContentBinding
+            viewerId="org.eclipse.remote.ui.view.connections">
+         <includes>
+            <contentExtension
+                  isRoot="true"
+                  pattern="org.eclipse.remote.ui.navigatorContent.connections">
+            </contentExtension>
+         </includes>
+      </viewerContentBinding>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            defaultHandler="org.eclipse.remote.ui.internal.views.NewRemoteConnectionHandler"
+            id="org.eclipse.launchbar.ui.command.newRemoteConnection"
+            name="New Remote Connection">
+      </command>
+      <command
+            defaultHandler="org.eclipse.remote.ui.internal.views.DeleteConnectionHandler"
+            id="org.eclipse.launchbar.ui.command.deleteConnection"
+            name="Delete">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="toolbar:org.eclipse.remote.ui.view.connections">
+         <command
+               commandId="org.eclipse.launchbar.ui.command.newRemoteConnection"
+               icon="icons/new_wiz.gif"
+               label="New Remote Connection"
+               style="push">
+         </command>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.eclipse.remote.ui.view.connections">
+         <command
+               commandId="org.eclipse.launchbar.ui.command.deleteConnection"
+               label="Delete"
+               style="push">
+         </command>
+      </menuContribution>
    </extension>
 
 </plugin>
