Got things to the point where basic UI comes up.
Focus has been on getting the Arduino new remote wizard to launch.
But also gets us to the point that the Connections view comes up with
the Local connection pre-populated.

Change-Id: I3fb3abdbcdabd39f5f2b60e0e10ca36cae59752e

--- a/bundles/org.eclipse.launchbar.core/plugin.xml
+++ b/bundles/org.eclipse.launchbar.core/plugin.xml
@@ -2,6 +2,7 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension-point id="launchBarContributions" name="Launch Bar Contributions" schema="schema/launchBarContributions.exsd"/>
+   <extension-point id="remoteServices2" name="Remote Services" schema="schema/remoteServices2.exsd"/>
    <extension
          point="org.eclipse.launchbar.core.launchBarContributions">
       <targetType
