--- a/bundles/org.eclipse.launchbar.ui/plugin.xml
+++ b/bundles/org.eclipse.launchbar.ui/plugin.xml
@@ -17,6 +17,12 @@
       </command>
       <command
             categoryId="org.eclipse.launchbar.ui.category.launchBar"
+            defaultHandler="org.eclipse.launchbar.ui.internal.commands.DeployCommandHandler"
+            id="org.eclipse.launchbar.ui.command.deploy"
+            name="Deploy Workspace Plugins">
+      </command>
+      <command
+            categoryId="org.eclipse.launchbar.ui.category.launchBar"
             defaultHandler="org.eclipse.launchbar.ui.internal.commands.LaunchActiveCommandHandler"
             id="org.eclipse.launchbar.ui.command.launchActive"
             name="Launch Active Launch Configuration">
@@ -57,7 +63,16 @@
             name="Launch Target"
             project="false">
       </wizard>
-
+   </extension>
+   
+   <extension
+         point="org.eclipse.ui.bindings">
+      <key
+            commandId="org.eclipse.launchbar.ui.command.launchActive"
+            contextId="org.eclipse.ui.contexts.dialogAndWindow"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="F12">
+      </key>
    </extension>
 
 </plugin>
